--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,39 @@
     <title>
       MemeGen
     </title>
+    <link rel="stylesheet" type="text/css" href="bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div id="top"></div>
-    <div id="mid">
-      Image: <input id="image" type="text"><br>
-      Top Line: <input id="topText" type="text" value="temp"><br>
-      Bottom Line: <input id="bottomText" type="text"><br><br>
-      <button id="memeButton">Create Dank Meme!</button>
-    </div>
-    <div id="bot">
+    <div id="top">
+      <br />
+      <div id="imgOut"></div>
       <p>
         To send images over chats:<br />
         Right Click -> Copy Image<br />
       </p>
-      <div id="imgOut"></div>
     </div>
+
+    <div id="mid">
+
+      <div id="midLeft">
+        <h2>Create Yo Dankest Meme:</h2>
+        Image: <input id="image" type="text"><br>
+        Top Line: <input id="topText" type="text"><br>
+        Bottom Line: <input id="bottomText" type="text"><br><br>
+        <button id="memeButton">Create My Dank Meme!</button>
+      </div>
+
+      <div id="centerGap"></div>
+
+      <div id="midRight">
+        <h2>Avalible Images:</h2>
+        <div id="imageNames"></div>
+      </div>
+
+    </div>
+
+    <div id="bot"></div>
   </body>
   <script src="background.js" type="text/javascript"></script>
 </html>
