Updated HTML/CSS and added to ReadMe
Added install instructions to the readme and made small tweaks to the
html/css.

--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,25 @@
     <div id="top">
       <br />
       <div id="imgOut"></div>
-      <p>
-        To send images over chats:<br />
-        Right Click -> Copy Image<br />
-      </p>
+      <br />
+      To send images over chats:<br />
+      Right Click -> Copy Image<br />
+      <br />
     </div>
 
     <div id="mid">
 
-      <div id="midLeft">
+      <div id="midTop">
         <h2>Create Yo Dankest Meme:</h2>
-        Image: <input id="image" type="text"><br>
-        Top Line: <input id="topText" type="text"><br>
-        Bottom Line: <input id="bottomText" type="text"><br><br>
-        <button id="memeButton">Create My Dank Meme!</button>
+        Meme (copy name from below):<input id="image" type="text"><br>
+        Top Text: <input id="topText" type="text"><br>
+        Bottom Text: <input id="bottomText" type="text"><br><br>
+        <button id="memeButton" type="button" class="btn btn-outline-success">
+          Create My Dank Meme!
+        </button>
       </div>
 
-      <div id="centerGap"></div>
-
-      <div id="midRight">
+      <div id="midBottom">
         <h2>Avalible Images:</h2>
         <div id="imageNames"></div>
       </div>
